Fixed the auto-corrected misspelling of the Friedmann equation and added stuff on the inflationary Friedmann equation. Got confused about the consistency of early-universe domination and accelerating expansion conditions for epsilon. Not sure what happened there.

--- a/manuscript/thesis.tex
+++ b/manuscript/thesis.tex
@@ -56,10 +56,37 @@
 Inflationary theory was first proposed by Alan Guth as a possible solution to the horizon and flatness problems \citep{Guth1981}. At the time, the standard cosmological model of the early universe was an adiabatically expanding, radiation-dominated universe. This model had two fundamental problems: the horizon problem and the flatness problem. Simply put, the horizon problem is the realization that the universe is homogenous and isotropic on scales far larger than the particle horizon (the farthest distance from which a point could ever receive information, given the age and expansion rate of the universe). 
 
 \section{Mathematical Derivations (Not a real section, just a holding place for stuff)}
-Let $\phi$ be an inflationary field. It is governed by two equations, the Friedman equation: 
+\subsection{Inflationary Friedmann equation}
+To see how one could implement an inflationary theory, let us first examine a non-inflationary Friedmann equation:
+\begin{equation}
+H^2 = \left ( \frac{\dot a(t)}{a(t)} \right ) ^2 = \frac{8 \pi G}{3} \left [ \frac{\rho^0_m}{a^3} + \frac{\rho^0_r}{a^4} + \Lambda + \frac{\sigma^2}{a^6} + \frac{K}{a^2} \right ]
+\end{equation}
+where $\rho^0_m$ is the energy density of matter in the universe at time $t=0$ (set to be the present time), $\rho^0_r$ is the current energy of radiation, $\Lambda$ is the cosmological constant, $\sigma$ is the cosmic anisotropy term, and $K$ is the curvature of the universe. As we can see by examining the powers of $a$ in each term, the early universe is dominated by the anisotropy term, $\propto a^{-6}$, while the late universe is dominated by the curvature term (and cosmological constant). Therefore, the simplest way to add inflation to the model of the universe is to add an inflationary term to the Friedmann equation: 
+\begin{equation}
+H^2 = \left ( \frac{\dot a(t)}{a(t)} \right ) ^2 = \frac{8 \pi G}{3} \left [ \frac{\rho^0_m}{a^3} + \frac{\rho^0_r}{a^4} + \Lambda + \frac{\sigma^2}{a^6} + \frac{K}{a^2} + \frac{\rho^0_\phi}{a^{2\epsilon}} \right ]
+\end{equation}
+where $\phi^0_\phi$ is the energy density of the inflationary field and $\epsilon$ is an exponent that must satisfy $\epsilon>3$ for inflation to dominate in the early universe. \mep{I have in my notes that $\epsilon<1$ for inflation and $\epsilon>3$ for contraction, but that doesn't make sense, so I think that's wrong.} 
+
+Now using this form for the inflationary term, let's examine what an inflation-dominated universe would look like. In a $\phi$-dominated universe, the Friedmann equation becomes:
+\begin{equation}
+\left ( \frac{\dot a}{a} \right ) ^2 = \frac{H_0 \Omega_\phi}{a^{2\epsilon}},
+\end{equation}
+where $H_0$ is the Hubble constant and $\Omega_\phi = \tfrac{8\pi G \rho_\phi}{3 H_0}$. Now, solving this equation for $a(t)$ gives
+\begin{equation}
+a(t) \propto (\epsilon \sqrt{H_0 \Omega_\phi} t)^{1/\epsilon},
+\end{equation}
+and hence 
+\begin{equation}
+\ddot a(t) \propto \left ( \frac{1-\epsilon}{\epsilon} \right ) (H_0 \Omega_\phi)^{1/2\epsilon} t^{\tfrac{1-2\epsilon}{\epsilon}}. 
+\end{equation}
+From this, we can see that the condition for an expanding universe is $\epsilon<1$. \mep{Shoot. So my notes must have been right. But how can a small power in the denominator dominate at small values of a? That doesn't make sense!?!?}
+
+
+\subsection{Inflationary Field}
+Let $\phi$ be an inflationary field. It is governed by two equations, the Friedmann equation: 
 \begin{equation}
 H = \sqrt{\tfrac{1}{3} \left ( \tfrac{1}{2} \dot \phi^2 + V(\phi) \right )},
-\label{eqn:Friedman}
+\label{eqn:Friedmann}
 \end{equation}
 and the Klein-Gordon equation:
 \begin{equation}
@@ -73,13 +100,14 @@ Another useful definition is the number of e-folds until the end of inflation, d
 N = -\int_t^{t_{end}} H \d t \text{\ \ \ or\ equivalently\ \ \ } \d N = -H \d t. 
 \label{eqn:defN}
 \end{equation}
-If we let $\phi'$ denote the derivative of $\phi$ with respect to $N$, so that $\dot \phi = -H \phi'$ the Friedman equation becomes
+If we let $\phi'$ denote the derivative of $\phi$ with respect to $N$, so that $\dot \phi = -H \phi'$ the Friedmann equation becomes
 \begin{equation}
 H^2 = \frac{V(\phi)}{3 - \tfrac{1}{2}(\phi')^2},
 \end{equation}
 and the Klein-Gordon equation becomes 
 \begin{equation}
 2H^2\phi'' + H^2(\phi')^3 - 6H^2\phi' + 2V'(\phi) = 0.
+\label{eqn:KG_N}
 \end{equation}
 
 \subsection{Slow Roll Approximation}
@@ -88,16 +116,19 @@ In the slow roll approximation, we assume that $\dot \phi$ and $\ddot \phi$ are 
 \left | \frac{V'(\phi)}{V(\phi)} \right | <<1 \text{\ \ \ and\ \ \ } \left | \frac{V''(\phi)}{V(\phi)} \right | <<1 .
 \label{eqn:SlowRollApprox}
 \end{equation}
-With these approximations, the Friedman equation becomes
+With these approximations, the Friedmann equation becomes
 \begin{equation}
 3 H^2 \approx_{sr} V(\phi),
-\label{eqn:Friedman_sr}
+\label{eqn:Friedmann_sr}
 \end{equation}
 and the Klein-Gordon equation becomes
 \begin{equation}
 3 H \dot \phi \approx_{sr} -V'(\phi)
 \label{eqn:KG_sr}
 \end{equation}
+We use these approximations to find the initial conditions for integrating equation (\ref{eqn:KG_N}): $\phi(N=0)$ and $\dot \phi(N=0)$. To do this, we use the fact that, at the end of inflation (i.e. at $N=0$), $\epsilon = 1$. 
+
+
 
 \bibliographystyle{apj}
 \bibliography{thesis}{}
