--- a/manuscript/thesis.tex
+++ b/manuscript/thesis.tex
@@ -13,6 +13,7 @@
 
 \def\d{\mathrm{d}}
 \def\L{\mathscr{L}}
+\def\half{\tfrac{1}{2}}
 
 \definecolor{applegreen}{rgb}{0.55, 0.71, 0.0}
 \newcommand{\mep}[1]{{\color{applegreen} \textbf{[MEP:  #1]}}}
@@ -81,7 +82,12 @@ and hence
 \begin{equation}
 \ddot a(t) \propto \left ( \frac{1-\epsilon}{\epsilon} \right ) (H_0 \Omega_\phi)^{1/2\epsilon} t^{\tfrac{1-2\epsilon}{\epsilon}}. 
 \end{equation}
-From this, we can see that the condition for an expanding universe is $\epsilon<1$. \mep{Shoot. So my notes must have been right. But how can a small power in the denominator dominate at small values of a? That doesn't make sense!?!?} Therefore, we want to find an inflationary theory that produces an inflationary term in the Friedmann equation $\propto a^{-2\epsilon}$ so that the universe will be dominated by expansion at early times. In order to derive a field theory that will produce such an inflationary term, we turn to the equation of state, $w=\rho/p$, where $\rho$ is the energy density and $p$ is the pressure of the field. The equation of state is related to $\epsilon$ by the equation $\epsilon = \tfrac{3}{2}(w+1)$. Thus, an inflationary field must have an equation of state $w<-1/3$. Table \ref{tab:field_scenarios} summarizes the values $w$ and $\epsilon$ and the evolution of $a(t)$ for different types of fields. 
+From this, we can see that the condition for an expanding universe is $\epsilon<1$. \mep{Shoot. So my notes must have been right. But how can a small power in the denominator dominate at small values of a? That doesn't make sense!?!? Also, I know for a fact that the radiation term dominates before matter. So to be consistent with that, higher (negative) powers dominate earlier.} Therefore, we want to find an inflationary theory that produces an inflationary term in the Friedmann equation $\propto a^{-2\epsilon}$ so that the universe will be dominated by expansion at early times. In order to derive a field theory that will produce such an inflationary term, we turn to the equation of state, $w=\rho/p$, where $\rho$ is the energy density and $p$ is the pressure of the field. The equation of state is related to $\epsilon$ by the equation 
+\begin{equation}
+\epsilon = \tfrac{3}{2}(w+1). 
+\label{eqn:eps_w}
+\end{equation}
+Thus, an inflationary field must have an equation of state $w<-1/3$. Table \ref{tab:field_scenarios} summarizes the values $w$ and $\epsilon$ and the evolution of $a(t)$ for different types of fields. 
 
 \begin{table}[htbp]
    \centering
@@ -103,15 +109,16 @@ From this, we can see that the condition for an expanding universe is $\epsilon<
 \subsection{Inflationary Field}
 From section \ref{ssec:InflationaryFriedmann}, we saw that an inflationary field must have an equation of state $w<-1/3$. From this, we want to put constrains on the Lagrangian density $\L$. Let $\phi$ be an inflationary field. Its Lagrangian density takes the form:
 \begin{equation}
-\L = -\tfrac{1}{2} ( \partial_\mu \phi)^2 - V(\phi)
+\L = -\half ( \partial_\mu \phi)^2 - V(\phi)
 \end{equation}
 Using the assumptions that $\phi$ is homogenous (so that $\partial_j \phi = 0$) and isotropic (so that we can use the Minkowski metric $\eta_{\mu\nu}$), we find that the stress-energy tensor of the field is
 \begin{equation}
-T_{\mu\nu} = -\eta_{\mu 0} \dot \phi^2 + \eta_{\mu\nu}(\tfrac{1}{2}\dot \phi^2+V(\phi)).
+T_{\mu\nu} = -\eta_{\mu 0} \dot \phi^2 + \eta_{\mu\nu}(\half\dot \phi^2+V(\phi)).
 \end{equation}
 From this, we find the equation of state is
 \begin{equation}
-w = \frac{\tfrac{1}{2} \dot \phi^2 - V(\phi)}{\tfrac{1}{2} \dot \phi^2 + V(\phi)}.
+w = \frac{\half \dot \phi^2 - V(\phi)}{\half \dot \phi^2 + V(\phi)}.
+\label{eqn:w}
 \end{equation}
 Putting in the constraint on $w$ for inflation, we find that an inflationary field must satisfy 
 \begin{equation}
@@ -123,7 +130,7 @@ Putting in the constraint on $w$ for inflation, we find that an inflationary fie
 \section{Eqns for Code}
 Let $\phi$ be an inflationary field. It is governed by two equations, the Friedmann equation: 
 \begin{equation}
-H = \sqrt{\tfrac{1}{3} \left ( \tfrac{1}{2} \dot \phi^2 + V(\phi) \right )},
+H = \sqrt{\tfrac{1}{3} \left ( \half \dot \phi^2 + V(\phi) \right )},
 \label{eqn:Friedmann}
 \end{equation}
 and the Klein-Gordon equation:
@@ -140,7 +147,7 @@ N = -\int_t^{t_{end}} H \d t \text{\ \ \ or\ equivalently\ \ \ } \d N = -H \d t.
 \end{equation}
 If we let $\phi'$ denote the derivative of $\phi$ with respect to $N$, so that $\dot \phi = -H \phi'$ the Friedmann equation becomes
 \begin{equation}
-H^2 = \frac{V(\phi)}{3 - \tfrac{1}{2}(\phi')^2},
+H^2 = \frac{V(\phi)}{3 - \half(\phi')^2},
 \end{equation}
 and the Klein-Gordon equation becomes 
 \begin{equation}
@@ -164,9 +171,11 @@ and the Klein-Gordon equation becomes
 3 H \dot \phi \approx_{sr} -V'(\phi)
 \label{eqn:KG_sr}
 \end{equation}
-We use these approximations to find the initial conditions for integrating equation (\ref{eqn:KG_N}): $\phi(N=0)$ and $\dot \phi(N=0)$. To do this, we use the fact that, at the end of inflation (i.e. at $N=0$), $\epsilon = 1$. 
-
-
+We use these approximations to find the initial conditions for integrating equation (\ref{eqn:KG_N}): $\phi(N=0)$ and $\dot \phi(N=0)$. To do this, we use the fact that, at the end of inflation (i.e. at $N=0$), $\epsilon = 1$. Recall from Section \ref{ssec:InflationaryFriedmann} that the condition for accelerated expansion is $\epsilon<1$. Therefore, as the universe transitions out of the inflationary epoch and into a period of decelerating expansion (where $\epsilon>1$), there must be a point where $\epsilon=1$, marking the end of inflation. Putting together equations (\ref{eqn:eps_w}) and (\ref{eqn:w}), we find that 
+\begin{equation}
+\epsilon = \frac{3}{2} \left ( \frac{\dot \phi^2}{\half \dot \phi^2 + V(\phi)} \right ) \approx_{sr} \half \left (\frac{V'(\phi)}{V(\phi)} \right ) ^2 
+\end{equation}
+where we have used the slow roll approximations $\half \dot \phi^2 << V(\phi)$ and equation (\ref{eqn:KG_sr}). Setting $\epsilon=1$ gives us an equation we can solve for $\phi(N=0)$. Once we have $\phi(N=0)$, we can easily us equation (\ref{eqn:KG_sr}) to find $\dot \phi(N=0)$. 
 
 \bibliographystyle{apj}
 \bibliography{thesis}{}
